# Cloud-Distributed-Training-and-Serving

./: .dockerignore  .gitignore  README.md  pyproject.toml
infrastructure/docker/: README.md  deepspeed_zero2.json  docker-compose.deepspeed.yaml  training.Dockerfile
infrastructure/k8s/nautilus/: job-preprocess.yaml  pvc-data.yaml
infrastructure/prometheus/: training.yaml
src/training/: cli.py  data.py  formatting.py  logging_utils.py  metrics.py  model.py  train.py
src/training/configs/: training.yaml
src/training/train/: __init__.py  base_trainer.py  config.py  sft_trainer.py
